Added features for Spring assignment-2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 logging.level.org.springframework = debug
 spring.profiles.active=dev
 # DB config
-spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+#spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/userpart
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+api.url = https://random-data-api.com/api/v2/users?size=1
