Added Async processing for create and update users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 logging.level.org.springframework = debug
 spring.profiles.active=dev
+
 # DB config
 #spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
 spring.datasource.url=jdbc:postgresql://localhost:5432/userpart
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 api.url = https://random-data-api.com/api/v2/users?size=1
+
+
+# Kafka config
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id = user-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
